--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -40,7 +40,34 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X-values are same\n",
+      "loading image ../data/orthophotos/nw/dop10rgbi_32_464_5766_1_nw_2022.jp2.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pt/hacking/hire-me/.venv/lib/python3.10/site-packages/PIL/Image.py:3167: DecompressionBombWarning: Image size (100000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading image ../data/orthophotos/nw/dop10rgbi_32_464_5767_1_nw_2022.jp2.\n",
+      "Concat files ../data/orthophotos/nw/dop10rgbi_32_464_5766_1_nw_2022.jp2 and ../data/orthophotos/nw/dop10rgbi_32_464_5767_1_nw_2022.jp2 along the Y-axis\n",
+      "X-values are same\n",
+      "loading image ../data/orthophotos/nw/dop10rgbi_32_465_5766_1_nw_2022.jp2.\n"
+     ]
+    }
+   ],
    "source": [
     "loader = OrthoLoader(x=x, y=y, radius=radius, data_dir=data_dir)\n",
     "\n",
