add download in nb

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "from urllib.request import urlretrieve\n",
+    "import zipfile\n",
+    "import os\n",
     "\n",
     "try:\n",
     "    from src.utils import OrthoLoader\n",
@@ -15,6 +18,23 @@
     "    import sys\n",
     "    sys.path.append('..')\n",
     "    from src.utils import OrthoLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE_URL = \"https://drive.usercontent.google.com/download?id=140PpLsdnVOQVIp5ia9jT_yvqtcWtF8Gj&export=download&confirm=t&uuid=483b1776-4e25-4976-9837-b498c823754a\"\n",
+    "urlretrieve(SAMPLE_URL, \"orthophotos.zip\")\n",
+    "\n",
+    "# check if data dir exist and create otherwise\n",
+    "if not os.path.exists(\"../data\"):\n",
+    "    os.makedirs(\"../data\")\n",
+    "\n",
+    "with zipfile.ZipFile(\"orthophotos.zip\", 'r') as zip_ref:\n",
+    "    zip_ref.extractall(\"../data\")\n"
    ]
   },
   {
