--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -13,11 +13,11 @@
     "import os\n",
     "\n",
     "try:\n",
-    "    from src.utils import OrthoLoader\n",
+    "    from src.utils import OrthoLoader, get_image\n",
     "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    sys.path.append('..')\n",
-    "    from src.utils import OrthoLoader"
+    "    from src.utils import OrthoLoader, get_image"
    ]
   },
   {
@@ -58,20 +58,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the loader object\n",
-    "loader = OrthoLoader(x=x, y=y, radius=radius, data_dir=DATASET)\n",
-    "# check if there is one or more images that need to be loaded to display the desired area\n",
-    "if len(loader.target_files) > 1:\n",
-    "    _map = loader.stitch_images()\n",
-    "else:\n",
-    "    _map = loader.load_img()\n",
-    "\n",
-    "# show an image of the entire map with the area highlighted that is going to be cropped\n",
-    "loader.plot_map(_map, target=True)\n",
-    "# crop and resize the map\n",
-    "cropped = loader.crop_and_resize(_map)\n",
-    "# show the resulting image\n",
-    "loader.plot_map(cropped)"
+    "%%time\n",
+    "# choose _print=True to get visual output\n",
+    "cropped_image = get_image(x, y, radius, DATASET, _print=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_image = get_image(x, y, radius, DATASET, _print=True)"
    ]
   }
  ],
