--- a/notebooks/initial_nb.ipynb
+++ b/notebooks/initial_nb.ipynb
@@ -2,20 +2,20 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [],
+      "id": "ZsjcCQIJJ07S",
       "metadata": {
         "id": "ZsjcCQIJJ07S"
       },
-      "id": "ZsjcCQIJJ07S"
+      "source": []
     },
     {
       "cell_type": "markdown",
       "id": "474b374f",
       "metadata": {
+        "id": "474b374f",
         "jupyter": {
           "source_hidden": false
-        },
-        "id": "474b374f"
+        }
       },
       "source": [
         "# Syte Data Engineering Coding Challenge"
@@ -23,16 +23,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Instructions"
-      ],
+      "id": "_x5TWoKB9Wii",
       "metadata": {
         "id": "_x5TWoKB9Wii"
       },
-      "id": "_x5TWoKB9Wii"
+      "source": [
+        "## Instructions"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "rIJQnqsR8qU3",
+      "metadata": {
+        "id": "rIJQnqsR8qU3"
+      },
       "source": [
         "### Goal\n",
         "\n",
@@ -104,20 +108,16 @@
         "When you feel ready share the Colab Notebook with us.\n",
         "\n",
         "**Have Fun!!!**\n"
-      ],
-      "metadata": {
-        "id": "rIJQnqsR8qU3"
-      },
-      "id": "rIJQnqsR8qU3"
+      ]
     },
     {
       "cell_type": "markdown",
       "id": "fc5afc84",
       "metadata": {
+        "id": "fc5afc84",
         "jupyter": {
           "source_hidden": false
-        },
-        "id": "fc5afc84"
+        }
       },
       "source": [
         "## Download sample data"
@@ -128,28 +128,17 @@
       "execution_count": null,
       "id": "fb028bc6",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fb028bc6",
         "jupyter": {
           "outputs_hidden": false,
           "source_hidden": false
         },
-        "id": "fb028bc6",
-        "outputId": "b901e06f-8f80-4583-b694-ad45409638a7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "b901e06f-8f80-4583-b694-ad45409638a7"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('orthophotos.zip', <http.client.HTTPMessage at 0x7e7774514ca0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
+      "outputs": [],
       "source": [
         "from urllib.request import urlretrieve\n",
         "SAMPLE_URL = \"https://drive.usercontent.google.com/download?id=140PpLsdnVOQVIp5ia9jT_yvqtcWtF8Gj&export=download&confirm=t&uuid=483b1776-4e25-4976-9837-b498c823754a\"\n",
@@ -161,72 +150,33 @@
       "execution_count": null,
       "id": "57d3679e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "57d3679e",
         "jupyter": {
           "outputs_hidden": false,
           "source_hidden": false
         },
-        "id": "57d3679e",
-        "outputId": "d5a75d57-2413-42f8-cb5e-a686d0453584",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "d5a75d57-2413-42f8-cb5e-a686d0453584"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "dop10rgbi_32_462_5766_1_nw_2022.jp2  dop10rgbi_32_466_5766_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5767_1_nw_2022.jp2  dop10rgbi_32_466_5767_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5768_1_nw_2022.jp2  dop10rgbi_32_466_5768_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5769_1_nw_2022.jp2  dop10rgbi_32_466_5769_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5770_1_nw_2022.jp2  dop10rgbi_32_466_5770_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5771_1_nw_2022.jp2  dop10rgbi_32_466_5771_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5772_1_nw_2022.jp2  dop10rgbi_32_466_5772_1_nw_2022.jp2\n",
-            "dop10rgbi_32_462_5773_1_nw_2022.jp2  dop10rgbi_32_466_5773_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5766_1_nw_2022.jp2  dop10rgbi_32_467_5766_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5767_1_nw_2022.jp2  dop10rgbi_32_467_5767_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5768_1_nw_2022.jp2  dop10rgbi_32_467_5768_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5769_1_nw_2022.jp2  dop10rgbi_32_467_5769_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5770_1_nw_2022.jp2  dop10rgbi_32_467_5770_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5771_1_nw_2022.jp2  dop10rgbi_32_467_5771_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5772_1_nw_2022.jp2  dop10rgbi_32_467_5772_1_nw_2022.jp2\n",
-            "dop10rgbi_32_463_5773_1_nw_2022.jp2  dop10rgbi_32_467_5773_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5766_1_nw_2022.jp2  dop10rgbi_32_468_5766_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5767_1_nw_2022.jp2  dop10rgbi_32_468_5767_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5768_1_nw_2022.jp2  dop10rgbi_32_468_5768_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5769_1_nw_2022.jp2  dop10rgbi_32_468_5769_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5770_1_nw_2022.jp2  dop10rgbi_32_468_5770_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5771_1_nw_2022.jp2  dop10rgbi_32_468_5771_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5772_1_nw_2022.jp2  dop10rgbi_32_468_5772_1_nw_2022.jp2\n",
-            "dop10rgbi_32_464_5773_1_nw_2022.jp2  dop10rgbi_32_468_5773_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5766_1_nw_2022.jp2  dop10rgbi_32_469_5766_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5767_1_nw_2022.jp2  dop10rgbi_32_469_5767_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5768_1_nw_2022.jp2  dop10rgbi_32_469_5768_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5769_1_nw_2022.jp2  dop10rgbi_32_469_5769_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5770_1_nw_2022.jp2  dop10rgbi_32_469_5770_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5771_1_nw_2022.jp2  dop10rgbi_32_469_5771_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5772_1_nw_2022.jp2  dop10rgbi_32_469_5772_1_nw_2022.jp2\n",
-            "dop10rgbi_32_465_5773_1_nw_2022.jp2  dop10rgbi_32_469_5773_1_nw_2022.jp2\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import zipfile\n",
         "with zipfile.ZipFile(\"orthophotos.zip\", 'r') as zip_ref:\n",
         "    zip_ref.extractall(\"./\")\n",
         "\n",
-        "!ls orthophotos/nw"
+        "! ls orthophotos/nw\n"
       ]
     },
     {
       "cell_type": "markdown",
       "id": "fd7d3c04",
       "metadata": {
+        "id": "fd7d3c04",
         "jupyter": {
           "source_hidden": false
-        },
-        "id": "fd7d3c04"
+        }
       },
       "source": [
         "## Orthophoto Sample Extraction\n",
@@ -239,11 +189,11 @@
       "execution_count": null,
       "id": "6cd744c9",
       "metadata": {
+        "id": "6cd744c9",
         "jupyter": {
           "outputs_hidden": false,
           "source_hidden": false
-        },
-        "id": "6cd744c9"
+        }
       },
       "outputs": [],
       "source": [
@@ -261,10 +211,10 @@
       "cell_type": "markdown",
       "id": "b5e7c55c",
       "metadata": {
+        "id": "b5e7c55c",
         "jupyter": {
           "source_hidden": false
-        },
-        "id": "b5e7c55c"
+        }
       },
       "source": [
         "## Performance analysis for `get_image`"
@@ -275,11 +225,11 @@
       "execution_count": null,
       "id": "ece8a29c",
       "metadata": {
+        "id": "ece8a29c",
         "jupyter": {
           "outputs_hidden": false,
           "source_hidden": false
-        },
-        "id": "ece8a29c"
+        }
       },
       "outputs": [],
       "source": [
@@ -292,10 +242,10 @@
       "execution_count": null,
       "id": "37e14896",
       "metadata": {
+        "id": "37e14896",
         "jupyter": {
           "source_hidden": false
-        },
-        "id": "37e14896"
+        }
       },
       "outputs": [],
       "source": [
@@ -304,6 +254,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
       "language": "python",
@@ -320,9 +273,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.2"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
