just import the func

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -13,11 +13,11 @@
     "import os\n",
     "\n",
     "try:\n",
-    "    from src.utils import OrthoLoader, get_image\n",
+    "    from src.utils import get_image\n",
     "except ModuleNotFoundError:\n",
     "    import sys\n",
     "    sys.path.append('..')\n",
-    "    from src.utils import OrthoLoader, get_image"
+    "    from src.utils import get_image"
    ]
   },
   {
