add paths to find lib

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -11,13 +11,10 @@
     "from urllib.request import urlretrieve\n",
     "import zipfile\n",
     "import os\n",
-    "\n",
-    "try:\n",
-    "    from src.utils import get_image\n",
-    "except ModuleNotFoundError:\n",
-    "    import sys\n",
-    "    sys.path.append('..')\n",
-    "    from src.utils import get_image"
+    "import sys\n",
+    "sys.path.append(\"..\") # to load module in src/\n",
+    "sys.path.append(\"../src\") # to find the libjpeg2000.so file\n",
+    "from src.utils import get_image"
    ]
   },
   {
@@ -44,10 +41,10 @@
    "outputs": [],
    "source": [
     "# the coordinates\n",
-    "x = 464999\n",
-    "y = 5767000\n",
-    "# x = 465250\n",
-    "# y = 5767250\n",
+    "# x = 464999\n",
+    "# y = 5767000\n",
+    "x = 465250\n",
+    "y = 5767250\n",
     "\n",
     "radius = 100\n",
     "\n",
@@ -62,7 +59,7 @@
    "source": [
     "%%time\n",
     "# choose _print=True to get visual output\n",
-    "cropped_image = get_image(x, y, radius, DATASET, _print=False)"
+    "cropped_image = get_image(x, y, radius, DATASET, _print=False, use_c=False)"
    ]
   },
   {
@@ -71,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cropped_image = get_image(x, y, radius, DATASET, _print=True)"
+    "cropped_image = get_image(x, y, radius, DATASET, _print=True, use_c=False)"
    ]
   }
  ],
