--- a/notebooks/stuff.ipynb
+++ b/notebooks/stuff.ipynb
@@ -8,18 +8,8 @@
    "source": [
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import numpy as np\n",
-    "from multiprocessing import Pool, cpu_count\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "import asyncio\n",
-    "import io\n",
-    "import aiofiles\n",
-    "import nest_asyncio\n",
-    "from typing import List\n",
-    "\n",
-    "\n",
-    "nest_asyncio.apply()"
+    "import matplotlib.patches as patches\n",
+    "import numpy as np"
    ]
   },
   {
@@ -29,7 +19,7 @@
    "outputs": [],
    "source": [
     "path1 = \"data/orthophotos/nw/dop10rgbi_32_462_5766_1_nw_2022.jp2\"\n",
-    "path2 = \"data/orthophotos/nw/dop10rgbi_32_462_5767_1_nw_2022.jp2\"\n"
+    "path2 = \"data/orthophotos/nw/dop10rgbi_32_462_5767_1_nw_2022.jp2\""
    ]
   },
   {
@@ -39,9 +29,7 @@
    "outputs": [],
    "source": [
     "image1 = Image.open(path1).convert(\"RGB\")\n",
-    "image_array_1 = np.array(image1)\n",
-    "# image2 = Image.open(path2).convert(\"RGB\")\n",
-    "# image_array_2 = np.array(image2)"
+    "image_array_1 = np.array(image1)"
    ]
   },
   {
@@ -133,7 +121,7 @@
     "\n",
     "# Display the plots\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -142,10 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as patches\n",
-    "\n",
     "# Generate a placeholder 2000x2000 array with four different colored tiles\n",
     "array = np.zeros((2000, 2000, 3))\n",
     "\n",
@@ -241,7 +225,7 @@
     "plt.show()\n",
     "\n",
     "# Return the shape of the cropped array to verify dimensions\n",
-    "cropped_array.shape\n"
+    "cropped_array.shape"
    ]
   },
   {
@@ -250,37 +234,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = Image.open(\"../data/orthophotos/nw/dop10rgbi_32_469_5772_1_nw_2022.jp2\").convert(\"RGB\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Create the matrix representing an image with three channels (RGB)\n",
     "# For simplicity, let's use random values for the RGB channels\n",
     "A = np.random.randint(0, 256, (3, 4, 3), dtype=np.uint8)\n",
@@ -307,79 +260,7 @@
     "# Plot the subset as an image\n",
     "plt.imshow(subset)\n",
     "plt.title(\"Subset of A (a12:a13, a22:a23) as an RGB Image\")\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(A[1:2,:])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# crop correctly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "from src.utils import OrthoLoader, get_image\n",
-    "import matplotlib.pyplot as plt\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_image = Image.open(\"../data/orthophotos/nw/dop10rgbi_32_465_5767_1_nw_2022.jp2\").convert(\"RGB\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = get_image(x, y, 100, \"../data/orthophotos/nw\", _print=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_range = [x-100, x+100]\n",
-    "print(x_range)\n",
-    "y_range = [y-100, y+100]\n",
-    "print(y_range)"
+    "plt.show()"
    ]
   }
  ],
